--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "book-engine",
   "version": "1.0.0",
-  "description": "",
+  "description": "##description",
   "main": "server/server.js",
+  "engines": {
+    "node": "16.17.0"
+  },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
