--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "book-engine",
   "version": "1.0.0",
-  "description": "##description",
+  "description": "",
   "main": "server/server.js",
   "engines": {
     "node": "16.17.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
